<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkBlue"
        tools:ignore="MissingPrefix">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/titleLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/white"
                android:text="@string/secret_title"
                android:layout_marginTop="48dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                fontPath="@string/font_montserrat_alternates_bold"
                android:textSize="24sp"/>

        <TextView
                android:id="@+id/disclaimer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/secret_disclaimer"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/titleLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="48dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                fontPath="@string/font_montserrat_alternates_regular"/>

        <TextView
                android:id="@+id/oldSecret"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible"
                android:textSize="17sp"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/disclaimer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="48dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                fontPath="@string/font_montserrat_alternates_regular"/>

        <EditText
                android:id="@+id/secret"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/oldSecret"
                android:layout_marginTop="48dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:textColor="@color/white"
                android:textColorHint="@color/grey"
                android:hint="@string/secret_hint"/>

        <TextView
                android:id="@+id/newSecretButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textSize="15sp"
                fontPath="@string/font_montserrat_alternates_bold"
                android:textColor="@color/darkBlue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/secret"
                app:layout_constraintBottom_toTopOf="@id/oldSecretButton"
                android:layout_marginBottom="48dp"
                android:layout_marginTop="48dp"
                android:text="@string/save_secret_button"
                android:background="@drawable/btn_rounded_yellow"/>

        <TextView
                android:id="@+id/oldSecretButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible"
                android:textSize="15sp"
                android:padding="16dp"
                android:textColor="@color/white"
                android:text="@string/old_secret_button"
                fontPath="@string/font_montserrat_alternates_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="32dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>