<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightGrey"
        tools:ignore="MissingPrefix">

    <TextView
            android:id="@+id/onboardingSkipButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:text="@string/onboarding_skip"
            fontPath="@string/font_montserrat_alternates_bold"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/white"/>

    <androidx.viewpager.widget.ViewPager
            android:id="@+id/onboardingViewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/onboardingNextButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/onboardingSkipButton"/>

    <TextView
            android:id="@+id/onboardingNextButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/onboarding_next"
            android:textSize="14sp"
            fontPath="@string/font_montserrat_alternates_bold"
            android:padding="10dp"
            android:textAllCaps="true"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/onboardingViewPager"/>

</androidx.constraintlayout.widget.ConstraintLayout>

