<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkBlue"
        tools:ignore="MissingPrefix">

    <ImageView
            android:id="@+id/cityBackgroundImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintTop_toBottomOf="@id/cityBackgroundImage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/countryImage"
                    android:layout_width="176dp"
                    android:layout_height="176dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.0"/>
            <TextView
                    android:id="@+id/cityName"
                    style="@style/TitleStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textAlignment="center"
                    android:layout_marginTop="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                    android:id="@+id/cityDescription"
                    style="@style/DescriptionStyle"
                    fontPath="@string/font_montserrat_alternates_italic"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:maxLines="4"
                    android:ellipsize="end"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginBottom="32dp"
                    app:layout_constraintTop_toBottomOf="@id/cityName"/>

            <LinearLayout
                    android:id="@+id/buttonVisit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="32dp"
                    android:padding="10dp"
                    android:background="@drawable/btn_yellow_bg"
                    app:layout_constraintTop_toBottomOf="@id/cityDescription"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="1.0">
                <TextView
                        android:id="@+id/buttonText"
                        android:text="@string/cities_visit"
                        android:textSize="16dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textAllCaps="true"
                        fontPath="@string/font_montserrat_alternates_bold"
                        android:textColor="@color/primaryYellow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <ImageView
                        android:src="@drawable/ic_arrow_right"
                        android:layout_width="wrap_content"
                        android:paddingLeft="5dp"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>